<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="accessibility_service_desc">本软件不会获取您的任何隐私信息，请放心使用。</string>
    <string name="action_cancel">取消</string>
    <string name="app_main_switch">总开关</string>
    <string name="app_name">按键助手</string>

    <string name="label_collect_money_code">收款码</string>
    <string name="label_donate_summary">您的支持 是我前进的动力</string>
    <string name="label_loading_setting_response">正在等待Xposed响应&#8230;</string>
    <string name="label_main_switch_summary">请确认在Xposed installer框架中勾选此模块！</string>
    <string name="label_payment_code">付款码</string>
    <string name="label_scan">扫一扫</string>
    <string name="pref_key_donate">pref_key_donate</string>
    <string name="pref_key_hwkey_app_switch">pref_key_hwkey_app_switch</string>
    <string name="pref_key_hwkey_app_switch_double">pref_key_hwkey_app_switch_double</string>
    <string name="pref_key_hwkey_app_switch_long">pref_key_hwkey_app_switch_long</string>
    <string name="pref_key_hwkey_back">pref_key_hwkey_back</string>
    <string name="pref_key_hwkey_back_double">pref_key_hwkey_back_double</string>
    <string name="pref_key_hwkey_back_long">pref_key_hwkey_back_long</string>
    <string name="pref_key_hwkey_bixby">pref_key_hwkey_bixby</string>
    <string name="pref_key_hwkey_bixby_double">pref_key_hwkey_bixby_double</string>
    <string name="pref_key_hwkey_bixby_long">pref_key_hwkey_bixby_long</string>
    <string name="pref_key_hwkey_custom">pref_key_hwkey_custom</string>
    <string name="pref_key_hwkey_custom_double">pref_key_hwkey_custom_double</string>
    <string name="pref_key_hwkey_custom_long">pref_key_hwkey_custom_long</string>
    <string name="pref_key_hwkey_doubletap_speed">pref_key_hwkey_doubletap_speed</string>
    <string name="pref_key_hwkey_home_long">pref_key_hwkey_home_long</string>
    <string name="pref_key_hwkey_kill_delay">pref_key_hwkey_kill_delay</string>
    <string name="pref_key_hwkey_main_switch">pref_key_hwkey_main_switch</string>
    <string name="pref_key_hwkey_menu">pref_key_hwkey_menu</string>
    <string name="pref_key_hwkey_menu_double">pref_key_hwkey_menu_double</string>
    <string name="pref_key_hwkey_menu_long">pref_key_hwkey_menu_long</string>
    <string name="pref_key_hwkey_switch_app_switch_and_back">pref_key_hwkey_switch_app_switch_and_back</string>
    <string name="pref_key_samsung_os_dedicated">pref_key_samsung_os_dedicated</string>
    <string name="title_about">关于</string>
    <string name="title_alipay">支付宝</string>
    <string name="title_app_switch">最近任务键键</string>
    <string name="title_author">作者</string>
    <string name="title_back">返回键</string>
    <string name="title_bixby">Bixby键</string>
    <string name="title_custom_actions">自定义操作</string>
    <string name="title_donate">捐赠</string>
    <string name="title_fast_payment">快捷支付</string>
    <string name="title_home">Home键</string>
    <string name="title_menu">菜单键</string>
    <string name="title_other">其他</string>
    <string name="title_press_the_operation">按下动作</string>
    <string name="title_press_the_operation_double">双击动作</string>
    <string name="title_press_the_operation_long">长按动作</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="title_switch_app_switch_and_back">切换多任务键和返回键</string>
    <string name="title_switch_button">切换按键</string>
    <string name="title_wx">微信</string>
    <string name="toast_no_inset_alipay">没有安装支付宝</string>
    <string name="toast_no_inset_wx">没有安装微信</string>
    <string name="toast_pleas_select_model">请在Xposed Installer中勾选此模块</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="xposed_desc">更改各种实体按键和虚拟按键的动作</string>
</resources>
