<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/content_padding_def"
        android:paddingRight="@dimen/content_padding_def"
        android:text="@string/title_fast_payment"
        android:textColor="@color/textColorDark"
        android:textSize="18.0sp"
        android:visibility="gone" />

    <LinearLayout
        style="@style/FastPaymentLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_padding_def">

        <TextView
            style="@style/FastPaymentTitle"
            android:text="@string/title_wx" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip">

            <LinearLayout
                android:id="@+id/wx_scan"
                style="@style/ShortcutView">

                <ImageView
                    android:layout_width="@dimen/fast_payment_icon_size"
                    android:layout_height="@dimen/fast_payment_icon_size"
                    android:src="@mipmap/wx_scan" />

                <TextView
                    style="@style/ShortcutTextView"
                    android:text="@string/label_scan" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wx_payment_code"
                style="@style/ShortcutView">

                <ImageView
                    android:layout_width="@dimen/fast_payment_icon_size"
                    android:layout_height="@dimen/fast_payment_icon_size"
                    android:src="@mipmap/wx_payment_code" />

                <TextView
                    style="@style/ShortcutTextView"
                    android:text="@string/label_payment_code" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wx_collect_money_code"
                style="@style/ShortcutView">

                <ImageView
                    android:layout_width="@dimen/fast_payment_icon_size"
                    android:layout_height="@dimen/fast_payment_icon_size"
                    android:src="@mipmap/wx_collect_money_code" />

                <TextView
                    style="@style/ShortcutTextView"
                    android:text="@string/label_collect_money_code" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/FastPaymentLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_padding_def">

        <TextView
            style="@style/FastPaymentTitle"
            android:text="@string/title_alipay" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip">

            <LinearLayout
                android:id="@+id/alipay_scan"
                style="@style/ShortcutView">

                <ImageView
                    android:layout_width="@dimen/fast_payment_icon_size"
                    android:layout_height="@dimen/fast_payment_icon_size"
                    android:src="@mipmap/alipay_scan" />

                <TextView
                    style="@style/ShortcutTextView"
                    android:text="@string/label_scan" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/alipay_payment_code"
                style="@style/ShortcutView">

                <ImageView
                    android:layout_width="@dimen/fast_payment_icon_size"
                    android:layout_height="@dimen/fast_payment_icon_size"
                    android:src="@mipmap/alipay_payment_code" />

                <TextView
                    style="@style/ShortcutTextView"
                    android:text="@string/label_payment_code" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/alipay_collect_money_code"
                style="@style/ShortcutView">

                <ImageView
                    android:layout_width="@dimen/fast_payment_icon_size"
                    android:layout_height="@dimen/fast_payment_icon_size"
                    android:src="@mipmap/alipay_collect_money_code" />

                <TextView
                    style="@style/ShortcutTextView"
                    android:text="@string/label_collect_money_code" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>